# database-systems

./: .env.template  .pre-commit-config.yaml  Mongo.Dockerfile  Python.Dockerfile  README.md  docker-compose.yml  mongodb.conf  pyproject.toml
app/: connections.py  main.py  models.py
